# ahiru-tpm

./: .editorconfig  Cargo.nix  Cargo.toml  LICENSE  README.md  bacon.toml  flake.nix  justfile  newfile  shell.nix
.github/ISSUE_TEMPLATE/: custom.md  please-consider-creating-issues-at-codeberg.md  please-consider-creating-issues-at-https---codeberg-org-x3ro-ahiru-tpm-issues.md
.github/scripts/post-new-issue-to-codeberg/: add-label-to-codeberg-issue.py  post-comment-to-github-issue.py  post-issue-to-codeberg.py
.github/workflows/: mirror-issue-to-codeberg.yml
.res/: hyperfine-tpm-install.html  hyperfine-tpm-load.html
src/: action.rs  args.rs  attribute.rs  cmd.rs  key_bindings.rs  lib.rs  main.rs  plugin.rs  plugins.rs  prefix_lines.rs  progress_status.rs  quoted-spec.pest  quoted-string.pest  repo_url.rs  source-path.pest  spec.pest  spec.rs  tmux-config.pest  tmux.rs  tmux_config_parser.rs  truncate_ellipsis.rs  utils.rs
src/plugins/: action_result.rs  clean.rs  init.rs  install.rs  load.rs  mod.rs  sync.rs  update.rs
