[package]
name = "tpm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cmd_lib = "1.9.5"
getset = "0.1.5"
glob = "0.3.2"
is_executable = "1.0.4"
itertools = "0.14.0"
once_cell = "1.21.3"
pest = "2.8.0"
pest_derive = "2.8.0"
rayon = "1.10.0"
regex = "1.11.1"
thiserror = "2.0.12"
url = "2.5.4"
xdir = "0.1.0"
