[package]
name = "tpm-rs"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "tpm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
cmd_lib = "1.9.5"
env_logger = "0.11.8"
getset = "0.1.5"
glob = "0.3.2"
is_executable = "1.0.4"
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
pest = "2.8.0"
pest_derive = "2.8.0"
rayon = "1.10.0"
regex = "1.11.1"
thiserror = "2.0.12"
url = "2.5.4"
xdir = "0.1.0"
