[package]
name = "ahiru-tpm"
version = "0.4.0"
edition = "2024"
description = "Drop-in replacement for the famous Tmux Plugin Manager (TPM), written in Rust. 🦆"
license-file = "LICENSE"
homepage = "https://codeberg.org/x3ro/ahiru-tpm"
repository = "https://codeberg.org/x3ro/ahiru-tpm"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["tmux", "plugin", "plugin-manager", "tpm", "duck"]

[dependencies]
anyhow = "1.0.98"
cached = "0.55.1"
clap = { version = "4.5.39", features = ["derive"] }
cmd_lib = "1.9.5"
derive_builder = "0.20.2"
env_logger = "0.11.8"
futures = "0.3.31"
getset = "0.1.5"
glob = "0.3.2"
is_executable = "1.0.4"
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
pest = "2.8.0"
pest_derive = "2.8.0"
rayon = "1.10.0"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
xdir = "0.1.0"
